fixed not showing "drag handle"

--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -125,7 +125,7 @@ td.dragHandle {
 }
 
 td.showDragHandle {
-	background-image: url(images/updown.png);
+	background-image: url(../images/updown.png);
 	background-repeat: no-repeat;
 	background-position: center center;
 	cursor: move;
